# barrelytix

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.dlt/: .sources  secrets.toml
nginx/: default.conf
src/: app.py  db.py  eda.ipynb  extract.py  model.py  services.py
src/crude/: __init__.py  main.py
src/crude/sources/: eia.py
src/sources/: eia.py
