[project]
name = "crude"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Charlie", email = "email@email.com" }]
dependencies = [
    "httpx>=0.27.0",
    "dlt[duckdb]>=0.5.3",
    "streamlit>=1.37.1",
    "watchdog>=4.0.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[project.scripts]
crude = 'crude.main:main'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crude"]
