[project]
name = "crude"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Charlie", email = "email@email.com" }]
dependencies = [
    "dlt[duckdb]>=0.5.3",
    "httpx>=0.27.0",
    "streamlit>=1.37.1",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crude"]
